# NDKTest

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sorgs/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: ProjectorFocusManagerExt.h  ProjectorFocusWrapperType.h
app/src/main/java/com/sorgs/ndktest/: MainActivity.java  XgimiCamera.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sorgs/ndktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
